hphp/test/quick/on_list_assign.php.expectf
Fatal error: Invalid lvalue in %s/on_list_assign.php on line 12
